# SingularInterface

./: .gitignore  .hgignore  .mailmap  1.sh  BUGS  COPYRIGHT  Doxyfile  INSTALL  LICENSE  MERKEN  Makefile.am  Makefile.in  PackageInfo.g  README  README.auto  README.deficiencies  README.singular  SINGULARPATH.in  SINGULARVERSION  SW  TODO  VERSION  aclocal.m4  autogen.sh  configure  configure.ac  configuresingular  configuresingular.debug  configuresingular.sw  example  fetchsingular  fetchsingular.dev  fetchsingular.sw  index.md  init.g  libsing.astyle  makedoc.g  makesingular  makesingular.debug  makesingular.sw  (+5 more)
_data/: package.yml
_layouts/: default.html
cnf/: pkgconfig.h.in
dev/: BUGS  DISCUSSION  EMAILNOTIFICATIONS  NAMING_CONVENTIONS  NOTES  QUESTIONS  TODO  ZEROONECHAOS  singular-data-types.txt
doc/: SingularInterface.bib  appendix-implementation.xml  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  chap4.html  chap4.txt  chap4_mj.html  chap5.html  chap5.txt  chap5_mj.html  chapA.html  chapA.txt  chapA_mj.html  chapBib.html  chapBib.txt  chapBib_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html  example.g  integer.autodoc  intro.autodoc  intro.xml  libsing.xml  makedoc.g  makedoc.sh  matrix.autodoc  ring.autodoc
examples/: example.g  example1.g  example2.g  example3.g
lib/: arith.gi  convert.gi  interpreter.gd  interpreter.gi  libsing.gd  libsing.gi  libsingular.gd  libsingular.gi  proxy.gd  proxy.gi  singtypes.gd  singtypes.gi  view.gi
lib/types/: matrix.gi  ring.gd  ring.gi
m4/: ac_find_gap.m4  libpolys-check.m4  libsingular-check.m4
src/: Makefile.am  Makefile.in  calls.cc  cxxfuncs.cc  examples  gen_highlevel_mappings.cc  gen_highlevel_mappings.g  gen_lowlevel_common.g  gen_lowlevel_input.g  gen_lowlevel_mappings.g  gentableforGAP.cc  libsing.c  libsing.cc  libsing.h  lowlevel_mappings.cc  lowlevel_mappings.h  lowlevel_mappings_src.h.in  lowlevel_mappings_table.h  make.sh  matrix.cc  matrix.h  number.cc  number.h  poly.cc  poly.h  singobj.cc  singobj.h  singtypes.cc  singtypes.h  tt.cc
stylesheets/: styles.css
tst/: arith.tst  bigintmat.tst  bug.tst  calls.tst  check.g  cmpmat.tst  conversion_number.tst  doall.g  example0.tst  example1.tst  example2.tst  example3.tst  example4.tst  example5.tst  homalg_Purity.C.tst  homalg_Purity.c.tst  homalg_Purity.downC.tst  homalg_Purity.tst  homalg_Purity.upC.tst  idstring.tst  interpreter.tst  intmat.tst  matelm.tst  matrix.tst  memfill-new.g  memfill.g  mutable.tst  parse-indets.tst  proc.tst  proxy.tst  qring.tst  resolution.tst  stdfglm.tst  string.tst  testall.g  types.g  types.tst  vector.tst  zeroone.tst
tst/cmds/: LIB.tst  factorize.tst
tst/no_output/: homalg_Purity.tst
tst/types/: bigint.tst  intmat.tst  intvec.tst  list.tst  map.tst  matrix.tst  module.tst  number.tst  poly.tst  proxy.tst  qring.tst  resolution.tst  ring.tst  vector.tst
